fix(groups): pass tests except page related
